<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pass Num</string>

    <string name="action_instructions">Instructions</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="one">a</string>
    <string name="two">b</string>
    <string name="tree">c</string>
    <string name="four">d</string>
    <string name="five">e</string>
    <string name="six">f</string>
    <string name="seven">g</string>
    <string name="eight">h</string>
    <string name="nihen">i</string>
    <string name="zero">j</string>
    <string name="pl">+</string>
    <string name="mi">-</string>
    <string name="mu">*</string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="C">Clr</string>
    <string name="openb">(</string>
    <string name="closeb">)</string>
    <string name="mod">%</string>
    <string name="equal">SET</string>
    <string name="done">Done</string>
    <string name="ans" />
    <string name="tv" />
    <string name="tv1" />
    <string name="tv2" />
    <string name="tv3" />
    <string name="textv" />
    <string name="et1" />
    <string name="button1" />
    <string name="button2" />
    <string name="textview" />
    <string name="edittext" />
    <string name="username" />
    <string name="tvlogin" />
    <string name="tv1login" />
    <string name="etlogin" />
    <string name="blogin" />
    <string name="tvwel" />

    <string name="bcontinue">Continue</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_username">UsernameActivity</string>
    <string name="title_activity_database_helper">DatabaseHelper</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="instuctions">1. Use any username for signup process in main page
        \n2. Enter any formula that you can remember according to your ease or select from given examples
        \n3. Put the given numbers in your formula and click check to first check the formula
        and then press confirm to make it the password for the entered username
        \n4. Use back to return to the main page
        \n5. Now using the username you created login in the main page.
        \n6. Now substitute the values to your equation and click submit
        \n7. If correct then you will be directed to a welcome page otherwise you have 4 chances to get your answer write
        \n8. If you cannot login then make another username and try again.</string>

    <string name="spn_memory_burden">Memory Burden</string>
    <string-array name="arr_memory_burden">
        <item>Easy</item>
        <item>Average</item>
        <item>Difficult</item>
    </string-array>

    <string name="spn_understand">Understanding level</string>
    <string-array name="arr_understand">
        <item>Easy</item>
        <item>Difficult</item>
    </string-array>

    <string name="spn_remember">Understanding level</string>
    <string-array name="arr_remember">
        <item>Easy</item>
        <item>Difficult</item>
    </string-array>

    <string name="title_feedback_activity">Feedback Form</string>

    <string name="tv_feedback_ease_to_remember">How easy is to remember the password</string>
    <string name="tv_feeback_ease_of_registration">Ease of registration</string>
    <string name="tv_feedback_ease_of_login">Ease of login</string>
    <string name="tv_feedback_intuitivity">How intuitive is the password scheme</string>
    <string name="tv_feedback_other_suggestion">Any other suggestion</string>
    <string name="tv_feedback_overall_rating">Overall rating</string>

    <string name="tv_easy">Easy</string>
    <string name="tv_difficult">Hard</string>
    <string name="tv_low">Low</string>
    <string name="tv_high">High</string>

    <string name="tv_intuitive_low">Not so\nintuitive</string>
    <string name="tv_intuitive_high">Very\nintuitive</string>

    <string name="et_feedback_suggestion">Write your thoughts</string>

    <string name="btn_submit">Submit</string>

</resources>
