<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="84dip"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="2"
            android:text="@string/ans"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:gravity="bottom|center_vertical|center_horizontal|center"
        android:weightSum="100"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="25"
            android:weightSum="100">

            <Button
                android:id="@+id/b1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:onClick="onClick"
                android:layout_weight="20"
                android:text="@string/one" />

            <Button
                android:id="@+id/b4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/four" />

            <Button
                android:id="@+id/b7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/seven" />

            <Button
                android:id="@+id/bclr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/C" />

            <Button
                android:id="@+id/bopenb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/openb" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="25"
            android:weightSum="100">

            <Button
                android:id="@+id/b2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:text="@string/two" />

            <Button
                android:id="@+id/b5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:text="@string/five" />

            <Button
                android:id="@+id/b8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/eight" />

            <Button
                android:id="@+id/b0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/zero" />

            <Button
                android:id="@+id/bcloseb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/closeb" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="25">

            <Button
                android:id="@+id/b3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/tree" />

            <Button
                android:id="@+id/b6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/six" />

            <Button
                android:id="@+id/b9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/nihen" />

            <Button
                android:id="@+id/bdot"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/dot" />

            <Button
                android:id="@+id/bmod"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/mod" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="25">

            <Button
                android:id="@+id/bplu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/pl" />

            <Button
                android:id="@+id/bmin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/mi" />

            <Button
                android:id="@+id/bmul"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/mu" />

            <Button
                android:id="@+id/bdiv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/div" />

            <Button
                android:id="@+id/bequal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="20"
                android:onClick="onClick"
                android:text="@string/equal" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

