<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.numericalpass.LoginActivity">

    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="wrap_content"
        android:layout_height="84dip"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_weight="2"
        android:text="@string/tvlogin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/tv1login"
        android:layout_width="wrap_content"
        android:layout_height="84dip"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_weight="2"
        android:text="@string/tv1login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:id="@+id/etlogin"
        android:layout_width="fill_parent"
        android:layout_height="84dip"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_alignLeft="@+id/tv1login"
        android:layout_below="@+id/tv1login"
        android:layout_weight="2"
        android:text="@string/etlogin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <Button
        android:id="@+id/blogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etlogin"
        android:layout_below="@+id/etlogin"
        android:layout_marginTop="158dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="Submit" />

</RelativeLayout>
